# pyLACE

./: .gitignore  CITATION.cff  LACEManuscriptCorr.py  README.md  cStartPlotter.py  counterCurrentAna.py  environment.yml  fishDataBase.py  fishExample.py  fishPlot.py  fishRecAnalysis.py  matLabResultLoader.py  mediaHandler.py  pylace.yaml  pyproject.toml  run_spike2Scripts.py  speed_analyser.py  spike2SimpleIO.py  spike2SimpleReader.py  test_CCAna.py  test_cruisingAna.py  thrustAnalysis.py  traceAnalyser.py  traceCorrector.py
data_base_analyser/: EthoVisionExperimentSeries.py
data_handlers/: EthoVisionReader.py  matLabResultLoader.py  mediaHandler.py  spike2SimpleIO.py
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  installation.rst  requirements.txt
fish_data_base/: EthoVisionExperimentSeries  EthoVisionSQLdataBase.py  counterCurrentAna.py  fishDataBase.py  fishRecAnalysis.py  run_sufge1_c-start_ana.py
other_fish_related_analysis/: LACEManuscriptCorr.py
plotting/: DaywiseAnalysis.py  FishHabituationProfiler.py  IndividualAnalysisReportEthoVision.py
run_scripts/: c_start_movies.py  fishExample.py  plot_c-start_exp.py  run_curvature_ana.py  run_ethoTrackProcessing.py  run_ethoTrackReader.py  run_spike2Scripts.py  run_sufge1_c-start_ana.py  test_CCAna.py  test_cruisingAna.py
tests/: conftest.py  test_annotator_cli_headless.py  test_annotator_geometry.py  test_annotator_handles.py  test_annotator_sidecar.py  test_annotator_trim.py  test_cli_smoke.py  test_detect_arena_mask.py  test_detect_background.py  test_detect_chain.py  test_detect_cli.py  test_detect_frame.py  test_detect_hough_rescue.py  test_detect_watershed.py  test_inspect_navigation.py  test_inspect_palette.py  test_inspect_traces.py  test_posthoc_analytics.py  test_posthoc_appearance.py  test_posthoc_audit.py  test_posthoc_audit_verdicts.py  test_posthoc_clean.py  test_posthoc_explorer.py  test_posthoc_heading.py  test_posthoc_io.py  test_posthoc_metrics.py  test_posthoc_multifly.py  test_review_candidates.py  test_review_merge.py  test_review_panel.py  test_review_verdicts.py  test_roi_auto.py  test_roi_geometry.py  test_roi_mask.py  test_roi_sidecar.py  test_smoke.py  test_tracking_hungarian.py  test_tracking_kalman.py  test_tracking_tracks.py  test_tune_bg_editor.py  (+4 more)
(+77 files in other folders)
